--- a/client/src/Components/Auth/Auth.css
+++ b/client/src/Components/Auth/Auth.css
@@ -23,7 +23,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:rgba(40, 57, 101, 0.757);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -83,7 +83,6 @@ a{color:inherit;text-decoration:none}
 	background:rgba(255,255,255,.1);
 }
 .login-form .group input[data-type="password"]{
-	text-security:circle;
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
