--- a/client/src/Components/Auth/Auth.css
+++ b/client/src/Components/Auth/Auth.css
@@ -1,7 +1,8 @@
 body{
 	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
+	color: #dcdcdc;
+	font-weight: bold;
+	background-color: transparent;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
@@ -9,21 +10,27 @@ body{
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
+.body:hover {
+	background-color: #679436;
+}
+
 .login-wrap{
 	width:100%;
 	margin:auto;
 	max-width:525px;
 	min-height:670px;
 	position:relative;
-	background:url('./filipino food sign in.png') no-repeat center;
+	background:url('./sign-in\ tacos.jpg') no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	border-radius: 15px;
 }
 .login-html{
 	width:100%;
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40, 57, 101, 0.757);
+	background: #1d1d1b6d;
+	border-radius: 15px;
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -56,8 +63,8 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
-	color:#fff;
-	border-color:#1161ee;
+	color: #78c228;
+	border-color:#78c228;
 }
 .login-form{
 	min-height:345px;
@@ -78,19 +85,22 @@ a{color:inherit;text-decoration:none}
 .login-form .group .input,
 .login-form .group .button{
 	border:none;
+	/* color: #fefefe; */
+	color: black;
 	padding:15px 20px;
-	border-radius:25px;
-	background:rgba(255,255,255,.1);
+	border-radius:10px;
+	background:rgb(255, 255, 255);
 }
 .login-form .group input[data-type="password"]{
 	-webkit-text-security:circle;
 }
 .login-form .group .label{
-	color:#aaa;
+	color: #fefefe;;
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	background:#679436;
+	margin-top: 70px;
 }
 .login-form .group label .icon{
 	width:15px;
@@ -124,7 +134,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 }
 .login-form .group .check:checked + label .icon{
-	background:#1161ee;
+	background:#679436;
 }
 .login-form .group .check:checked + label .icon:before{
 	transform:scale(1) rotate(45deg);
