--- a/client/src/Components/Auth/Auth.css
+++ b/client/src/Components/Auth/Auth.css
@@ -29,7 +29,7 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background: #1d1d1b6d;
+	background: #1d1c1b6d;
 	border-radius: 15px;
 }
 .login-html .sign-in-htm,
@@ -55,6 +55,8 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .tab{
 	font-size:22px;
+	font-weight: 600;
+	color:  #deeccd;
 	margin-right:15px;
 	padding-bottom:5px;
 	margin:0 15px 10px 0;
@@ -65,6 +67,7 @@ a{color:inherit;text-decoration:none}
 .login-html .sign-up:checked + .tab{
 	color: #78c228;
 	border-color:#78c228;
+	font-weight: 600;
 }
 .login-form{
 	min-height:345px;
